--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -1,75 +1,73 @@
 <h2>Reactivos: <small> Dinámicos </small></h2>
 <hr>
 
-<form autocomplete="off">
+<form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete="off">
 
-    <!-- Nombre -->
-    <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Nombre</label>
-        <div class="col-sm-9">
-            <input class="form-control"
-                   placeholder="Nombre de la persona">
-            <span class="form-text text-danger">
-                   error message
-            </span>
-        </div>
+  <!-- Nombre -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input class="form-control" formControlName="name" placeholder="Nombre de la persona">
+      <span *ngIf="isValidField('name')" class="form-text text-danger">
+        {{ getFieldError('name') }}
+      </span>
     </div>
+  </div>
 
-    <!-- Agregar Favorito -->
-    <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Agregar</label>
-        <div class="col-sm-9">
+  <!-- Agregar Favorito -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
 
-            <div class="input-group">
-                <input class="form-control"
-                       placeholder="Agregar favorito">
+      <div class="input-group">
+        <input [formControl]="newFavorite"
+              class="form-control"
+              placeholder="Agregar favorito">
 
-
-                <button class="btn btn-outline-primary"
-                        type="button">
-                    Agregar favorito
-                </button>
-            </div>
-        </div>
+        <button (click)="onAddToFavorites()"
+                class="btn btn-outline-primary" type="button">
+          Agregar favorito
+        </button>
+      </div>
     </div>
+  </div>
 
 
-    <!-- Lista de Juegos Favoritos -->
-    <div class="mb-3 row">
-        <label class="col-sm-3 col-form-label">Favoritos</label>
-        <div class="col-sm-9">
+  <!-- Lista de Juegos Favoritos -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoriteGames">
 
-            <div class="mb-1">
+      <div class="mb-1" *ngFor="let favorite of favoriteGames.controls; let i = index">
 
-                <div class="input-group">
-                    <input class="form-control">
+        <div class="input-group">
+          <input class="form-control" [formControlName]="i">
 
-                    <button class="btn btn-outline-danger"
-                            type="button">
-                      Eliminar
-                  </button>
-                </div>
-                <span class="form-text text-danger">
-                   Este campo es requerido
-                </span>
-
-            </div>
-
+          <button
+                (click)="onDeleteFavorite(i)"
+                class="btn btn-outline-danger"
+                type="button">
+            Eliminar
+          </button>
         </div>
+        <span *ngIf="isValidFieldInArray(favoriteGames, i)" class="form-text text-danger">
+          Este campo es requerido
+        </span>
+      </div>
+
     </div>
+  </div>
 
 
 
-    <div class="row">
-        <div class="col-sm-12">
-            <button type="submit"
-                    class="btn btn-primary float-end"
-                    >
-                    <!-- [disabled]="myForm.invalid" -->
-                Guardar
-            </button>
-        </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="submit" class="btn btn-primary float-end">
+        <!-- [disabled]="myForm.invalid" -->
+        Guardar
+      </button>
     </div>
+  </div>
 
 
 </form>
@@ -77,13 +75,13 @@
 
 
 <span>Valid</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 <br>
 
 <span>Value</span>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <span>Agregar Juego</span>
-<pre>{{ 'object' | json }}</pre>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ newFavorite.valid | json }}</pre>
+<pre>{{ newFavorite.value | json }}</pre>
