finished switchesPage, with functional radio buttons and inputs for the persona.

--- a/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -7,7 +7,9 @@
   <div class="mb-3 row">
     <label class="col-sm-3 col-form-label">Nombre</label>
     <div class="col-sm-9">
-      <input class="form-control" formControlName="name" placeholder="Nombre de la persona">
+      <input class="form-control"
+            formControlName="name"
+            placeholder="Nombre de la persona">
       <span *ngIf="isValidField('name')" class="form-text text-danger">
         {{ getFieldError('name') }}
       </span>
@@ -38,7 +40,8 @@
     <label class="col-sm-3 col-form-label">Favoritos</label>
     <div class="col-sm-9" formArrayName="favoriteGames">
 
-      <div class="mb-1" *ngFor="let favorite of favoriteGames.controls; let i = index">
+      <div class="mb-1"
+          *ngFor="let favorite of favoriteGames.controls; let i = index">
 
         <div class="input-group">
           <input class="form-control" [formControlName]="i">
