--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -2,7 +2,7 @@
 <hr>
 
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSave()">
 
     <!-- Radio -->
     <div class="row mb-3">
@@ -12,6 +12,7 @@
             <div class="form-check">
                 <input class="form-check-input"
                        type="radio"
+                       formControlName="gender"
                        value="M"
                        id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
@@ -22,6 +23,7 @@
             <div class="form-check">
                 <input class="form-check-input"
                        type="radio"
+                       formControlName="gender"
                        value="F"
                        id="radioFemenino">
                 <label class="form-check-label" for="radioFemenino">
@@ -40,6 +42,7 @@
             <div class="form-check form-switch mt-2">
                 <input class="form-check-input"
                        type="checkbox"
+                       formControlName="wantNotifications"
                        id="flexSwitchCheckChecked">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
@@ -54,12 +57,13 @@
             <div class="form-check">
                 <input class="form-check-input"
                        type="checkbox"
+                       formControlName="termsAndConditions"
                        id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                   Términos y condiciones de uso
                 </label>
               </div>
-              <span class="form-text text-danger">
+              <span *ngIf="isValidField('termsAndConditions')" class="form-text text-danger">
                  Debe de aceptar las condiciones de uso
               </span>
 
@@ -81,15 +85,15 @@
 
 
 <h5>Valor del formulario</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br>
 
 <h5>Persona</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ person | json }}</pre>
 <br>
 
 <h5>Valid</h5>
-<pre>{{ 'object' | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
